Change threads to virtual